# Sennet

./: .gitignore  README.md  buf.gen.yaml  buf.yaml  install.sh  koyeb.yaml  mkdocs.yml  railway.json  render.yaml  roadmap.json
.github/workflows/: docs.yml  release.yml
agent/: Cargo.toml  Cross.toml  EBPF_BUILD.md  build.rs
agent/sennet-common/: Cargo.toml
agent/sennet-common/src/: lib.rs
agent/sennet-ebpf/: Cargo.toml
agent/sennet-ebpf/src/: main.rs
agent/src/: btf.rs  client.rs  config.rs  crypto.rs  docker.rs  ebpf.rs  flows.rs  heartbeat.rs  identity.rs  init.rs  interface.rs  k8s.rs  main.rs  status.rs  trace.rs  tui.rs  upgrade.rs
backend/: Dockerfile  fly.toml  go.mod  go.sum  main.go  sennet.db
backend/auth/: firebase.go  middleware.go
backend/cloud/: config.go  config_test.go  provider.go
backend/correlation/: engine.go  recommendations.go
backend/crypto/: encrypt.go
backend/dashboard/: index.html
backend/db/: db.go  db_test.go
backend/handler/: cost_handler.go  handler.go  handler_test.go  health_handler.go  key_handler.go  stats_handler.go
backend/metrics/: metrics.go
backend/middleware/: audit.go  auth.go  auth_test.go  cors.go  logging.go  ratelimit.go  security.go  signature.go
dashboards/: README.md  overview.json
docs/: DEPLOY.md  architecture.md  config_reference.md  contributing.md  index.md  install.md
proto/sentinel/v1/: sentinel.proto
tests/: README.md  run_tests.ps1
tests/integration/: test_e2e.ps1
tests/phase1/1.2_backend/: db_test.go  handler_test.go  middleware_test.go
tests/phase1/1.3_agent/: config_test.rs  heartbeat_test.rs  identity_test.rs
tests/phase2/2.1_ebpf/: test_ebpf.sh
tests/phase2/2.2_interface/: interface_test.rs
tests/phase3/3.1_build/: test_build.ps1
tests/phase3/3.2_installer/: test_install.sh  upgrade_test.rs
tests/phase4/4.1_dashboard/: test_dashboard.ps1
tests/phase4/4.2_docs/: test_docs.ps1
tests/phase9/: README.md
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/auth/: AuthLayout.tsx  ProtectedRoute.tsx
web/src/components/dashboard/: DashboardLayout.tsx  DashboardSidebar.tsx  TrafficChart.tsx
web/src/components/layout/: DocsSidebar.tsx  Footer.tsx  Navbar.tsx
web/src/components/marketing/: Architecture.tsx  Features.tsx  Hero.tsx  NetworkAnimation.tsx  QuickStart.tsx  TerminalDemo.tsx
web/src/components/ui/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  PageLoader.tsx  ScrollToHashElement.tsx  Toast.tsx
web/src/content/docs/: api.md  architecture.md  cli.md  configuration.md  ebpf.md  installation.md  introduction.md  metrics.md  quickstart.md
web/src/context/: AuthContext.tsx
web/src/hooks/: useToast.ts
web/src/lib/: firebase.ts
web/src/pages/: NotFoundPage.tsx
web/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
web/src/pages/dashboard/: DashboardPage.tsx  LiveTrafficPage.tsx  ServiceMapPage.tsx  SettingsPage.tsx
web/src/pages/docs/: DocsLayout.tsx  DocsPage.tsx
web/src/pages/home/: HomePage.tsx
