[package]
name = "sennet-agent"
version = "0.1.0"
edition = "2021"
description = "Sennet network observability agent"
authors = ["Sennet Team"]

[features]
default = []
embed_bpf = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

# HTTP client (sync, lighter than reqwest)
ureq = { version = "2", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Protobuf (for ConnectRPC)
prost = "0.13"

# Retry with exponential backoff
backoff = { version = "0.4", features = ["tokio"] }

# UUID for agent identity
uuid = { version = "1", features = ["v4", "serde"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Cryptographic hashing (for upgrade checksum verification)
sha2 = "0.10"
hex = "0.4"

# Kubernetes API client (Phase 7)
kube = { version = "0.87", features = ["runtime", "client", "derive", "ws"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Async stream utilities (for K8s watch)
futures = "0.3"

# Shared eBPF types
sennet-common = { path = "sennet-common" }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directories for config/state paths
dirs = "5"

# CLI Output
colored = "2"
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
# Note: aya 0.12 matches aya-ebpf 0.1.1 (used in sennet-ebpf)
aya = { version = "0.12", features = ["async_tokio"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
tokio-test = "0.4"

[[bin]]
name = "sennet"
path = "src/main.rs"
